// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 140641,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 140862,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 294661,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 322466,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 330794,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 305682,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 219761,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 219895,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 242868,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 220667,
}
`;

exports[`System initialized: depositBase and long 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 378848,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 220813,
}
`;

exports[`System initialized: depositQuote and short 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 369236,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 314907,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 305086,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 190143,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 198617,
}
`;

exports[`mc happens: MC long position with deleverage 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 221828,
}
`;

exports[`mc happens: MC long reinit 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 192544,
}
`;

exports[`mc happens: MC short position with deleverage 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 221877,
}
`;

exports[`mc happens: MC short reinit 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 192494,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 397252,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 264980,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 382306,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 258315,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 318469,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 268124,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 295583,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 396967,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 411756,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 340771,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 164,
  "gasUsed": 407185,
}
`;
